[gd_scene load_steps=5 format=3 uid="uid://cnbp88623k5jh"]

[ext_resource type="Script" path="res://Script/Game.gd" id="1"]
[ext_resource type="Script" path="res://Script/CandySpawner.gd" id="2"]
[ext_resource type="Script" path="res://Scene/HUD.gd" id="2_5r8mr"]
[ext_resource type="Texture2D" uid="uid://ccxmd1v0nd7wi" path="res://Image/Title.png" id="3_rwxge"]

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("2_5r8mr")

[node name="MessageLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0.737255, 0.788235, 1)
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.835294, 0, 0, 1)

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(72, 72)

[node name="CandySpawner" type="Node2D" parent="."]
script = ExtResource("2")

[node name="Goobers" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = 5
texture = ExtResource("3_rwxge")
centered = false
hframes = 4
frame = 1

[node name="Audio" type="Node" parent="."]

[node name="Win" type="AudioStreamPlayer" parent="Audio"]

[node name="Lose" type="AudioStreamPlayer" parent="Audio"]

[node name="effectiveTimer" type="Timer" parent="."]
wait_time = 22.0
one_shot = true

[node name="incrementTimer" type="Timer" parent="."]

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_message_timer_timeout"]
[connection signal="timeout" from="effectiveTimer" to="." method="_on_effective_timer_timeout"]
[connection signal="timeout" from="incrementTimer" to="." method="_on_increment_timer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_start_timer_timeout"]
